--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ button, .buttonlike{
     border: solid 1px white;
     border-radius: 100vh;
     color:white;
-    padding-left: 7%;
+    /* padding-left: 7%;
     padding-right: 7%;
     padding-top: 0.5vh;
-    padding-bottom: 0.5vh;
+    padding-bottom: 0.5vh; */
+    padding: 0.5vh 7% 0.5vh 7%;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
     margin-top: 0.5vh;
@@ -68,8 +69,8 @@ button, .buttonlike{
 
 p{
     cursor: default;
-    font-weight: 300;
-    font-size: clamp(0.1rem, min(2vh, 2vw), 2rem);
+    font-weight: 400;
+    font-size: clamp(0.05rem, min(1.7vh, 1.7vw), 1rem);
     margin:0;
     z-index: 2;
 }
@@ -107,22 +108,33 @@ h4{
     opacity: 1;
 }
 
-h5{
-    font-size: clamp(0.12rem, min(1.2vh, 1.2vw), 1.2rem);
-    font-weight: 500;
-    margin:0;
-    z-index: 2;
-    opacity: 1;
-}
 
-button:hover{
+button, .buttonlike:hover{
     padding-left: 12%;
     padding-right: 12%;
 }
 
-.buttonlike:hover{
+.absolute-btn:hover{
     padding-left: 1.5vw;
     padding-right: 1.5vw;
+}
+
+.absolute-btn.disable{
+    opacity:0.5;
+}
+
+.absolute-btn.disable:hover{
+    cursor: not-allowed;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
+
+.absolute-btn.disable p{
+    cursor: not-allowed;
+}
+
+button p{
+    cursor: pointer;
 }
 
 .notransition {
@@ -153,7 +165,7 @@ button:hover{
     background-color: rgb(24, 26, 27);
     position:absolute;
     transition: background-color 150ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
-    z-index: 2;
+    z-index: 3;
 }
 
 .menu-container:hover{
@@ -188,7 +200,7 @@ p.section-text{
 
 .node{
     position:absolute;
-    z-index: 1;
+    z-index: 2;
     text-align: center;
     border: 2px solid;
     border-color: transparent;
@@ -358,9 +370,9 @@ input[type=number] {
 }
 
 .node-selection{
-    padding-top:clamp(0.2rem, min(1vw, 1vh), 1rem);
+    /* padding-top:clamp(0.2rem, min(1vw, 1vh), 1rem);
     padding-bottom:clamp(0.2rem, min(1vw, 1vh), 1rem);
     padding-left:clamp(0.3rem, min(1.5vw, 1.5vh), 1.5rem);
-    padding-right:clamp(0.3rem, min(1.5vw, 1.5vh), 1.5rem);
+    padding-right:clamp(0.3rem, min(1.5vw, 1.5vh), 1.5rem); */
     text-decoration: none;
 }
