--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ button, .buttonlike{
     color:rgb(255, 255, 255)
 }
 
+/* TEXT STYLE STUFF */
+
 p{
     cursor: default;
     font-weight: 400;
@@ -149,6 +151,47 @@ h4{
     z-index: 10;
     opacity: 1;
 }
+
+h5{
+    z-index: 10;
+}
+
+a{
+    color: rgb(69, 165, 255);
+}
+
+.spoiler, .spoiler2{
+    padding: 0 0.3rem 0 0.3rem;
+    color: black; 
+    border-radius: 0.2rem;
+    background-color:black;
+    transition: all 300ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.spoiler:hover{
+    color: rgba(255, 255, 255, 0.741);
+    background-color:rgb(68, 68, 68);
+
+    -webkit-touch-callout: initial;
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+}
+
+.spoiler2:hover { 
+    background-color:white; 
+}
+
+/* TEXT STYLE END */
 
 
 button, .buttonlike:hover{
@@ -212,6 +255,14 @@ button p{
 
 .menu-container:hover{
     background-color: #161819;
+}
+
+.no-scroll-bar {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width:none;  /* Firefox */
+}
+.no-scroll-bar::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .terminal{
