--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ p{
     margin:0;
     z-index: 10;
 }
+.legal p{
+    font-size: 0.8rem;
+}
 
 h1{
     cursor: default;
@@ -126,6 +129,9 @@ h1{
     letter-spacing: 5px;
     margin:0;
     z-index: 10;
+}
+.legal h1{
+    font-size: 2.5rem;
 }
 
 h2{
@@ -136,12 +142,18 @@ h2{
     margin:0;
     z-index: 10;
 }
+.legal h2{
+    font-size: 2rem;
+}
 
 h3{
     font-size: clamp(0.3rem, min(2.5vh, 2.5vw), 3rem);
     font-weight: 400;
     margin:0;
     z-index: 10;
+}
+.legal h3{
+    font-size: 1.5rem;
 }
 
 h4{
@@ -151,10 +163,17 @@ h4{
     z-index: 10;
     opacity: 1;
 }
+.legal h4{
+    font-size: 1.2rem;
+}
 
 h5{
     z-index: 10;
 }
+.legal h5{
+    font-size: 1rem;
+}
+
 
 a{
     color: rgb(69, 165, 255);
