--- a/style.css
+++ b/style.css
@@ -420,6 +420,11 @@ hr{
     box-shadow: -5px 5px 20px -10px black, 0px 0px 20px -10px black;
     border: 1.5px solid;
     border-color: #424242;
+    transition: opacity 300ms cubic-bezier(0.355, 0.010, 0.200, 1.010); /* custom */
+}
+
+.node-drag:hover{
+    opacity:0.
 }
 
 .selected-node{
@@ -571,6 +576,21 @@ hr{
 input[type=text]:focus{
     border-top: 1px solid #be1a00;
     border-color: #be1a00;
+}
+
+#networkname{
+    background-color: transparent;
+    z-index:100;
+    color:rgb(236, 236, 236);
+    font-family: poppins;
+    font-size: clamp(0.3rem, min(2.5vh, 2.5vw), 3rem);
+    outline: none;
+    border:none;
+    font-weight: 600;
+}
+
+#networkname:focus{
+    border:none
 }
 
 /* Chrome, Safari, Edge, Opera */
