--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ button, .buttonlike{
     border-radius: 100vh;
     color:white;
 
-    padding: 0.5vh 7% 0.5vh 7%;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-    margin-top: 0.5vh;
-    margin-bottom: 0.5vh;
+    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    margin-left: 0.6rem;
+    margin-right: 0.6rem;
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
     background-color: transparent;
     z-index: 10;
 
@@ -65,7 +65,7 @@ button, .buttonlike{
     -ms-user-select: none;
     user-select: none;
 
-    font-size: clamp(0.2rem, min(1.8vh, 1.8vw), 1.8rem);
+    font-size: 1rem;
 
     cursor:pointer;
     transition: all 230ms cubic-bezier(0.260, 0.050, 0.250, 1.000); /* custom */
